--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ test/data_codominantSNP_AccRte.txt
 test/data_codominantSNP_fst.txt
 test/data_codominantSNP_Verif.txt
 test/data_codominantSNP.sel
+GUI/build*
+GUI/BayeScEnv/BayeScEnv.pro.user*
